--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pabblo/libraryforpresentation": "^7.0.0",
+    "@pabblo/libraryforpresentation-ts": "^4.0.0",
     "jquery": "^3.6.0",
     "typescript": "^4.5.2"
   }
